--- a/app/src/main/res/layout/activity_pantalla_invitadx.xml
+++ b/app/src/main/res/layout/activity_pantalla_invitadx.xml
@@ -4,4 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PantallaInvitadx"/>
+    tools:context=".PantallaInvitadx">
+
+    <Button
+        android:id="@+id/botonCrearRegistroInvitadx"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:text="@string/boton_crearRegistro"
+        app:layout_constraintBottom_toTopOf="@+id/botonStockProductos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/botonStockProductos"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="216dp"
+        android:text="@string/visualizarStock"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/botonCrearRegistroInvitadx"
+        app:layout_constraintVertical_bias="0.821" />
+</androidx.constraintlayout.widget.ConstraintLayout>
