--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -66,7 +66,7 @@
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="@string/solicitud_de_contraseña"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
