--- a/app/src/main/res/layout/activity_main_recycler.xml
+++ b/app/src/main/res/layout/activity_main_recycler.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivityRecycler">
+    tools:context=".view.MainActivityRecycler">
 
     <TextView
         android:id="@+id/TituloRecyclerStockProductos"
