--- a/app/src/main/res/layout/activity_pantalla_crear_registro.xml
+++ b/app/src/main/res/layout/activity_pantalla_crear_registro.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PantallaCrearRegistro">
+    tools:context=".view.PantallaCrearRegistro">
 
     <TextView
         android:id="@+id/textViewPantallaCrearRegistro"
