--- a/app/src/main/res/layout/activity_pantalla_invitadx.xml
+++ b/app/src/main/res/layout/activity_pantalla_invitadx.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PantallaInvitadx">
+    tools:context=".view.PantallaInvitadx">
 
     <Button
         android:id="@+id/botonCrearRegistroInvitadx"
@@ -29,4 +29,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/botonCrearRegistroInvitadx"
         app:layout_constraintVertical_bias="0.821" />
+
+    <Button
+        android:id="@+id/botonRealizaPedido"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Realizar pedido"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/botonStockProductos" />
 </androidx.constraintlayout.widget.ConstraintLayout>
