--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.PantallaInicioSesion">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -17,7 +17,10 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorControlActivated"
             app:layout_scrollFlags="scroll|enterAlways" />
+
     </com.google.android.material.appbar.AppBarLayout>
 
+    //<include
+        layout="@layout/content_drawer"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
