--- a/app/src/main/res/layout/activity_crear_registro.xml
+++ b/app/src/main/res/layout/activity_crear_registro.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.FormularioNuevoCliente">
+    tools:context=".view.activity.FormularioNuevoCliente">
 
     <TextView
         android:id="@+id/tvFormularioCliente"
