--- a/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -19,7 +19,7 @@
         android:id="@+id/root_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.MainActivity">
+        tools:context=".view.activity.MainActivity">
 
         <TextView
             android:id="@+id/tituloAppTextView"
