--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.PantallaInicioSesion">
+    tools:context=".view.activity.PantallaInicioSesion">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
