--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
             android:title="Mis Direcciones"/>
         <item android:id="@+id/nav_item_tres"
             android:icon="@drawable/abc_vector_test"
-            android:title="Visualizar Stock" />
+            android:title="Realizar Pedido" />
     </group>
 
     <item android:title="Mi cuenta">
