--- a/app/src/main/res/layout/activity_main_stock_productos.xml
+++ b/app/src/main/res/layout/activity_main_stock_productos.xml
@@ -6,9 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".ui.MainActivityStockProductos">
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="411dp"
+        android:layout_height="641dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
