--- a/app/src/main/res/layout/activity_realizar_pedido_prueba2.xml
+++ b/app/src/main/res/layout/activity_realizar_pedido_prueba2.xml
@@ -9,12 +9,14 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/host"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="359dp"
-        android:layout_height="674dp"
+        android:layout_width="411dp"
+        android:layout_height="732dp"
         android:layout_marginBottom="4dp"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:navGraph="@navigation/nav_graph" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
