--- a/app/src/main/res/layout/fragment_tres.xml
+++ b/app/src/main/res/layout/fragment_tres.xml
@@ -8,6 +8,7 @@
     tools:context=".view.fragment.tres">
 
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -16,9 +17,10 @@
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.549"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.08" />
+        app:layout_constraintVertical_bias="0.278" />
 
     <Button
         android:id="@+id/buttonPaso3"
