--- a/app/src/main/res/layout/fragment_cuatro.xml
+++ b/app/src/main/res/layout/fragment_cuatro.xml
@@ -5,13 +5,13 @@
     android:id="@+id/frameLayout4"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".cuatro">
+    tools:context=".view.fragment.cuatro">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/hello_blank_fragment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
